--- a/package.json
+++ b/package.json
@@ -1,55 +1,57 @@
 {
-  "private": true,
+  "name": "tensor-playground",
+  "version": "1.0.0",
+  "description": "By \r [Luo liangkui](http://www.kurryluo.com),\r [Lu yuhuan](),\r [Han yaxiong](), and \r [He Zhaocheng]()",
+  "main": "index.js",
   "scripts": {
-    "start": "roadhog server",
-    "build": "roadhog build",
-    "test": "roadhog test",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "build": "webpack --config build/webpack.prod.conf.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitee.com/simulation_group_of_sysu/tensor-playground.git"
+  },
+  "keywords": [
+    "tensor"
+  ],
+  "author": "kurryluo",
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^9.7.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.2",
+    "babel-plugin-import": "^1.9.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "stylus-loader": "^3.0.2",
+    "url-loader": "^2.3.0",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "antd": "^2.6.4",
-    "babel-runtime": "^6.22.0",
-    "classnames": "^2.2.5",
-    "dva": "^1.2.0",
-    "dva-loading": "^0.2.0",
-    "enquire": "0.0.2",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "rc-banner-anim": "^0.5.16",
-    "rc-queue-anim": "^1.2.2",
-    "rc-scroll-anim": "^1.0.7",
-    "rc-tween-one": "^1.3.1",
-    "react": "^15.4.2",
-    "react-custom-scrollbars": "^4.1.0",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.12.2",
-    "react-lazyload": "^2.2.7",
-    "react-redux": "^5.0.4",
-    "react-router": "^4.1.0",
-    "react-socket-io": "^0.2.4",
-    "react-sortable": "^1.2.0",
-    "react-sublime-video": "^0.2.5",
-    "react-tooltip": "3.2.3",
-    "react-weui": "^1.0.3",
-    "redux": "^3.6.0",
-    "superagent": "^3.5.2",
-    "table-export": "^1.0.1",
-    "weui": "^1.1.0"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-dva-hmr": "^0.3.2",
-    "babel-plugin-import": "^1.1.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "eslint": "^3.14.0",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "expect": "^1.20.2",
-    "husky": "^0.13.0",
-    "redbox-react": "^1.3.2",
-    "roadhog": "^0.5.2"
+    "antd": "^3.25.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
